add search items count

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,16 @@ body{
     display: none;
 }
 
+/* result found section  */
+#result-found{
+    display: none;
+}
+#result-found h1{
+    font-size: medium;
+}
+#result-text{
+    color: rgb(255, 120, 57);
+}
 /* not found section  */
 #not-found{
     display: none;
